# codex_backup

./: .env.example  .gitignore  Cargo.toml  README.md  README.zh-CN.md
.github/workflows/: release.yml
lib/: CodexBackup.psm1
scripts/: backup-codex.ps1  check-repo.ps1  init-repo.ps1  install-tools.ps1  install.ps1  install.sh  register-schedule.ps1  restore-codex.ps1
src/: cli.rs  config.rs  lib.rs  main.rs  password.rs  paths.rs  restic.rs  restore.rs  schedule.rs  staging.rs  visibility.rs
tests/: run-tests.ps1  rust_behavior.rs
