[package]
name = "codex-backup"
version = "0.1.0"
edition = "2021"

[lib]
name = "codex_backup"
path = "src/lib.rs"

[[bin]]
name = "codex-backup"
path = "src/main.rs"

[dependencies]
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
directories = "6"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
rpassword = "7"
rusqlite = { version = "0.38", features = ["backup", "bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
